j4c++: add Ch 23 JVM Internals and GC Tuning to outline
Covers class loading, JIT compilation, heap structure, GC algorithm
choices (Serial/Parallel/G1/ZGC/Shenandoah), key tuning flags, GC
log reading, and the standard JVM diagnostic toolchain.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>